--- a/bootstrap-in-class/task/task-4.html
+++ b/bootstrap-in-class/task/task-4.html
@@ -3,18 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>task-4</title>
-  <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.css">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
 
 </head>
 <body>
 <section class="container-fluid border mt-5">
-  <section class="row">
-      <!--one row of maximum columns 12-->
-    <section class="col-3 bg-danger" style="height: 300px"></section>
-    <section class="col-3 bg-primary" style="height: 300px"></section>
-    <section class="col-3 bg-success" style="height: 300px"></section>
-    <section class="col-3 bg-black" style="height: 300px"></section>
-  </section>
+    <section class="row">
+        <!--one row of maximum columns 12-->
+        <section class="col-sm-5 col-12 bg-danger col-lg-2 col-lg3 col-md-4" style="height: 300px"></section>
+        <section class="col-12 col-sm-3 col-lg-2 col-lg5 col-md-4 bg-primary" style="height: 300px"></section>
+        <section class="col-12 col-sm-3 col-lg-2 col-lg5 col-md-4 bg-success" style="height: 300px"></section>
+        <section class="col-12 col-sm-3 col-lg-2 col-lg5 col-md-4 bg-black" style="height: 300px"></section>
+        <section class="col-12 col-sm-3 col-lg-2 col-lg5 col-md-4 bg-danger" style="height: 300px"></section>
+        <section class="col-12 col-sm-3 col-lg-2 col-lg5 col-md-4 bg-primary" style="height: 300px"></section>
+        <section class="col-12 col-sm-3 col-lg-2 col-lg5 col-md-4 bg-success" style="height: 300px"></section>
+        <section class="col-12 col-sm-3 col-lg-2 col-lg5 col-md-4 bg-black" style="height: 300px"></section>
+        <section class="col-12 col-sm-3 col-lg-2 col-lg5 col-md-4 bg-danger" style="height: 300px"></section>
+        <section class="col-12 col-sm-3 col-lg-2 col-lg5 col-md-4 bg-primary" style="height: 300px"></section>
+        <section class="col-12 col-sm-3 col-lg-2 col-lg5 col-md-4 bg-success" style="height: 300px"></section>
+        <section class="col-12 col-sm-3 col-lg-2 col-lg5 col-md-4 bg-black" style="height: 300px"></section>
+    </section>
     <section class="row">
         <section class="col-12 bg-warning" style="height: 300px"></section>
     </section>
