--- a/bootstrap-in-class/task/task-5.html
+++ b/bootstrap-in-class/task/task-5.html
@@ -10,10 +10,10 @@
 <section class="container-fluid border mt-5">
   <section class="row">
     <!--one row of maximum columns 12-->
-    <!--extra small col-->
-    <!--small sm-col--->
-    <!--middle col-md--->
-    <!--large col-lg--->
+    <!--Extra small-col-->
+    <!--small-sm-col--->
+    <!--middle-col-md--->
+    <!--large-col-lg--->
     <section class="col-12 bg-warning col-sm-6 col-md-4 col-lg-6" style="height: 200px"></section>
     <section class="col-12 bg-primary col-sm-6 col-md-4 col-lg-6" style="height: 200px"></section>
     <section class="col-12 bg-success col-sm-12 col-md-4 col-lg-12" style="height: 200px"></section>
