--- a/bootstrap-in-class/task/task-1.html
+++ b/bootstrap-in-class/task/task-1.html
@@ -6,12 +6,15 @@
   <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.css">
 
   <style>
-
+    #main{
+      position: relative;
+      top: 60px;
+    }
   </style>
 </head>
 <body>
 <header>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <nav class="navbar navbar-expand-lg bg-body-tertiary position-fixed container-fluid top-0 z-1">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">POS</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,29 +23,26 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="#">Customer</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" href="#">Item</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link">Disabled</a>
+            <a class="nav-link" href="#">Orders</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
 </header>
-<main>
+<main class="container-fluid position-relative" id="main">
 
 
   <div class="container">
 
     <div class="row align-items-start">
-      <div class="col">
+      <div class="col-12 col-md-6 mt-5">
         <section class="form">
 
           <div class="mb-3">
@@ -70,7 +70,7 @@
       </div>
 
 
-      <div class="col">
+      <div class="col mt-5">
         <section>
           <div id="carouselExampleIndicators" class="carousel slide">
             <div class="carousel-indicators">
@@ -102,7 +102,7 @@
   </div>
 
   <section>
-    <table class="table">
+    <table class="table mt-5">
       <thead>
       <tr>
         <th scope="col" class="bg-light text-danger">#</th>
