--- a/bootstrap-in-class/task/task-6.html
+++ b/bootstrap-in-class/task/task-6.html
@@ -5,12 +5,16 @@
     <title>task-6</title>
   <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.css">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
 </head>
 <body>
 <section class="container-fluid">
-  <section class="row">
-    <div class="col"></div>
-  </section>
+<section class="row">
+    <section class="col-12 bg-warning col-sm-6 col-lg-3 col-md-3 col-xl-4 col-xxl-3" style="height: 100px"></section>
+    <section class="col-12 bg-primary col-sm-6 col-lg-3 col-md-6 col-xl-4 col-xxl-3" style="height: 100px"></section>
+    <section class="col-12 bg-success col-sm-6 col-lg-6 col-md-3 col-xl-2 col-xxl-3" style="height: 100px"></section>
+    <section class="col-12 bg-danger  col-sm-6 col-lg-12 col-md-4 col-xl-2 col-xxl-3" style="height: 100px"></section>
+</section>
 </section>
 </body>
 </html>
