--- a/bootstrap-in-class/task/task-1.html
+++ b/bootstrap-in-class/task/task-1.html
@@ -3,145 +3,155 @@
 <head>
     <meta charset="UTF-8">
     <title>task-1</title>
-  <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.css">
 
-  <style>
-    #main{
-      position: relative;
-      top: 60px;
-    }
-  </style>
+    <style>
+        #main {
+            position: relative;
+            top: 60px;
+        }
+    </style>
 </head>
 <body>
 <header>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary position-fixed container-fluid top-0 z-1">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">POS</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Customer</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Item</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Orders</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary position-fixed container-fluid top-0 z-1">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">POS</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Customer</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Item</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Orders</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 </header>
 <main class="container-fluid position-relative" id="main">
 
 
-  <div class="container">
+    <div class="container">
 
-    <div class="row align-items-start">
-      <div class="col-12 col-md-6 mt-5">
-        <section class="form">
+        <div class="row align-items-start">
+            <div class="col-12 col-md-6 mt-5">
+                <section class="form">
 
-          <div class="mb-3">
-            <label class="form-label">ID</label>
-            <input type="email" class="form-control"  placeholder="ID">
-          </div>
+                    <div class="mb-3">
+                        <label class="form-label">ID</label>
+                        <input type="email" class="form-control" placeholder="ID">
+                    </div>
 
-          <div class="mb-3">
-            <label class="form-label">Customer Name</label>
-            <input type="email" class="form-control"  placeholder="Name">
-          </div>
+                    <div class="mb-3">
+                        <label class="form-label">Customer Name</label>
+                        <input type="email" class="form-control" placeholder="Name">
+                    </div>
 
-          <div class="mb-3">
-            <label class="form-label">Customer address</label>
-            <input type="email" class="form-control"  placeholder="Address">
-          </div>
+                    <div class="mb-3">
+                        <label class="form-label">Customer address</label>
+                        <input type="email" class="form-control" placeholder="Address">
+                    </div>
 
-          <div class="mb-3">
-            <label class="form-label">Customer TP</label>
-            <input type="email" class="form-control"  placeholder="TP">
-          </div>
+                    <div class="mb-3">
+                        <label class="form-label">Customer TP</label>
+                        <input type="email" class="form-control" placeholder="TP">
+                    </div>
 
-          <button type="button" class="btn btn-primary">Save</button>
-        </section>
-      </div>
-
-
-      <div class="col mt-5">
-        <section>
-          <div id="carouselExampleIndicators" class="carousel slide">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    <button type="button" class="btn btn-primary">Save</button>
+                </section>
             </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="../assets/image/nature.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="../assets/image/nature%20(2).jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="../assets/image/nature%20(1).jpg" class="d-block w-100" alt="...">
-              </div>
+
+
+            <div class="col mt-5">
+                <section>
+                    <div id="carouselExampleIndicators" class="carousel slide">
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                                    class="active" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                                    aria-label="Slide 2"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                                    aria-label="Slide 3"></button>
+                        </div>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="../assets/image/nature.jpg" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="../assets/image/nature%20(2).jpg" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="../assets/image/nature%20(1).jpg" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                                data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                                data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
+                </section>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
-        </section>
-  </div>
 
-  <section>
-    <table class="table mt-5">
-      <thead>
-      <tr>
-        <th scope="col" class="bg-light text-danger">#</th>
-        <th scope="col" class="bg-light text-danger">First</th>
-        <th scope="col" class="bg-light text-danger">Last</th>
-        <th scope="col" class="bg-light text-danger">Handle</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr>
-        <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Otto</td>
-        <td>@mdo</td>
-      </tr>
-      <tr>
-        <th scope="row">2</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
-        <td>@fat</td>
-      </tr>
-      <tr>
-        <th scope="row">3</th>
-        <td colspan="2">Larry the Bird</td>
-        <td>@twitter</td>
-      </tr>
+            <section>
+                <table class="table mt-5">
+                    <thead>
+                    <tr>
+                        <th scope="col" class="bg-light text-danger">#</th>
+                        <th scope="col" class="bg-light text-danger">First</th>
+                        <th scope="col" class="bg-light text-danger">Last</th>
+                        <th scope="col" class="bg-light text-danger">Handle</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <th scope="row">1</th>
+                        <td>Mark</td>
+                        <td>Otto</td>
+                        <td>@mdo</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">2</th>
+                        <td>Jacob</td>
+                        <td>Thornton</td>
+                        <td>@fat</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">3</th>
+                        <td colspan="2">Larry the Bird</td>
+                        <td>@twitter</td>
+                    </tr>
 
-      <tr>
-        <th scope="row">3</th>
-        <td colspan="2">Larry the Bird</td>
-        <td>@twitter</td>
-      </tr>
+                    <tr>
+                        <th scope="row">3</th>
+                        <td colspan="2">Larry the Bird</td>
+                        <td>@twitter</td>
+                    </tr>
 
-      </tbody>
-    </table>
-  </section>
+                    </tbody>
+                </table>
+            </section>
+
+        </div>
+
+    </div>
 
 </main>
 <footer></footer>
-<script src="../assets/bootstrap/js/bootstrap.js">  </script>
+<script src="../assets/bootstrap/js/bootstrap.js"></script>
 </body>
 </html>
