--- a/bootstrap-in-class/task/task-1.html
+++ b/bootstrap-in-class/task/task-1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>task-1</title>
-    <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css">
 
     <style>
         #main {
@@ -24,7 +24,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Customer</a>
+                        <a class="nav-link active" aria-current="page" href="">Customer</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Item</a>
