--- a/bootstrap-in-class/task/web-application.html
+++ b/bootstrap-in-class/task/web-application.html
@@ -14,7 +14,7 @@
 <body>
 
 <main class="row d-flex justify-content-center align-items-center ">
-<section class="h-75 col-10 bg-white shadow-lg rounded-5 row">
+<section class="h-100 col-10 bg-white shadow-lg rounded-2 row">
     <div class="col-12">
         <nav class="navbar navbar-expand-lg bg-transparent border-bottom container-fluid w-100">
             <div class="container-fluid">
@@ -49,3 +49,52 @@
 <script src="../assets/bootstrap/js/bootstrap.js"></script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="col-6 d-flex justify-content-center">
+    <form class="d-flex" role="" method="">
+        <input class="form-control me-2 mb-2 mb-lg-0" type="" placeholder="Enter Name/TP/Address"
+               aria-label="Search" id="txtSearch">
+        <button class="btn btn-warning dropdown-toggle me-2 mb-2 mb-lg-0" type="button"
+                data-bs-toggle="dropdown" aria-expanded="false">
+            Option
+        </button>
+        <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Name</a></li>
+            <li><a class="dropdown-item" href="#">Address</a></li>
+            <li><a class="dropdown-item" href="#">TP</a></li>
+        </ul>
+        <button class="btn btn-outline-success me-2" type="submit">Search</button>
+    </form>
+</div>
+
+
+<div class="col-5 d-flex justify-content-end">
+    <button type="button" class="justify-content-end btn btn-dark me-5" id="btnGetAll">
+        Get All
+    </button>
+
+    <!--btn add-->
+
+    <!-- Button trigger modal -->
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+        Launch demo modal
+    </button>
+</div>
