add css variable sample

--- a/bootstrap-in-class/task/task-1.html
+++ b/bootstrap-in-class/task/task-1.html
@@ -6,9 +6,15 @@
     <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css">
 
     <style>
+
+       :root{
+           --blue: #fafafa;
+       }
+
         #main {
             position: relative;
             top: 60px;
+            background: var(--blue);
         }
     </style>
 </head>
